force-app/main/default/objects/Deployment__c.object
<CustomObject>
    <fields>
        <fullName>Destination_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Org</label>
        <referenceTo>SF_Org__c</referenceTo>
        <relationshipLabel>Deployments (Destination Org)</relationshipLabel>
        <relationshipName>DeploymentDest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Backup_Taken__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Backup Taken</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Org</label>
        <referenceTo>SF_Org__c</referenceTo>
        <relationshipLabel>Deployments</relationshipLabel>
        <relationshipName>Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Classes__c</fullName>
        <label>Test Classes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Level__c</fullName>
        <label>Test Level</label>
        <type>TextArea</type>
    </fields>
    <label>Deployment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Destination_Org__c</columns>
        <columns>Source_Org__c</columns>
        <columns>Test_Classes__c</columns>
        <columns>Test_Level__c</columns>
        <columns>Is_Backup_Taken__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>D.No.-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>